--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-particles-js": "^3.3.0",
+    "react-scroll-into-view": "^1.8.2"
   }
 }
